refactor: setting up the grid for the photo gallery

--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,6 +1,14 @@
 @use "base" as *;
 
 .gallery {
-  background-color: $color-grey-dark-1;
+  background-color: $color-grey-light-1;
   grid-column: full-start / full-end;
+
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+
+  & > * {
+    width: 100%;
+  }
 }
