--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -4,10 +4,59 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
+    background-image: linear-gradient(rgba($color-primary, 0.5), rgba($color-primary, 0.5)), url("../img/back.jpg");
+
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    align-items: center;
+  }
+
+  &__img--1 {
+    width: 100%;
+    grid-column: 2 / span 4;
+    grid-row: 2 / span 4;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+  }
+
+  &__img--2 {
+    width: 115%;
+    grid-column: 4 / span 3;
+    grid-row: 4 / span 2;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+    z-index: 20;
   }
 
   &__content {
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+    padding: 6rem 8vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+
+    // display: grid;
+    // align-content: center;
+    // justify-items: start;
   }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+  }
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+.mb-md {
+  margin-bottom: 3rem;
+}
+.mb-lg {
+  margin-bottom: 4rem;
+}
+.mb-xl {
+  margin-bottom: 8rem;
 }
